Add pages and schedules post endpoints
